# CTPClientDemo

./: CMakeLists.txt  CTPClientDemo.ini  DBDriver.cpp  DBDriver.h  DBWriter.cpp  DBWriter.h  GVAR.cpp  GVAR.h  MarketDataHandle.cpp  MarketDataHandle.h  README.md  TradingHandle.cpp  TradingHandle.h  Utility.cpp  Utility.h  devlog.md  initialize.cpp  initialize.h  main.cpp  problem.txt  sociDB.cpp  sociDB.h
Debug/: CMakeCache.txt  CTPClientDemo.cbp  Makefile  cmake_install.cmake
Debug/ini/: CTPClientDemo.ini  db.ini  front.ini
Release/: CMakeCache.txt  CTPClientDemo  CTPClientDemo.cbp  Makefile  Public.con  cmake_install.cmake
Release/ini/: CTPClientDemo.ini
ctpapi_linux64/: ThostFtdcUserApiStruct.h
ini/: CTPClientDemo.ini  db.ini
